peac_dev/force-app/main/default/objects/Remit_To__c/Remit_To__c.object-meta.xml
<CustomObject>
    <label>Remit To</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Remit To Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remit To Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>