peac_dev/force-app/main/default/objects/Remit_To__c/fields/Remit_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Remit_To_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remit To Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>