peac_dev/force-app/main/default/objects/Remit_To__c/fields/Remit_To_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Remit_To_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remit To Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>