peac_dev/force-app/main/default/objects/Remit_To__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Remit_To_Value__c</columns>
    <columns>Remit_To_Address__c</columns>
    <columns>Remit_To_City__c</columns>
    <columns>Remit_To_State__c</columns>
    <columns>Remit_To_Zip_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>